# gcp-async-batch-web-app-infra

./: .gitignore  README.md  docker-compose.yml
.claude/: CLAUDE.md
.claude/skills/create-spec/: SKILL.md
.claude/skills/docs-consistency/: SKILL.md
apps/batch-worker/: Dockerfile  config.py  processor.py  pyproject.toml  storage.py  worker.py
apps/streamlit-app/: .env.example  Dockerfile  app.py  config.py  pubsub_client.py  pyproject.toml
docs/01_guidelines/: spec-driven-development.md  tool.md
docs/02_architecture/: design.md
docs/03_specs/: batch-sample.md  gcp-deployment-quick-start.md  gcp-deployment.md  streamlit-app.md
terraform/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  tfplan  variables.tf
terraform/modules/cloud-run/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud-run-worker/: main.tf  outputs.tf  variables.tf
terraform/modules/pubsub/: main.tf  outputs.tf  variables.tf
terraform/modules/redis/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
